# affective-longing

./: .gitignore  README.md  pyproject.toml
demo_memory_db/: chroma.sqlite3
examples/: quickstart.py  quickstart_emotion.py  quickstart_integrated.py  quickstart_relationship.py
src/affective_longing/: __init__.py  engine.py
src/affective_longing/emotion/: __init__.py  engine.py  vad.py
src/affective_longing/memory/: __init__.py  memory_store.py  store.py  trigger_engine.py
src/affective_longing/relationship/: __init__.py  ou_process.py  stages.py  state_machine.py
test_db/: chroma.sqlite3
tests/: __init__.py  test_emotion.py  test_integration.py  test_memory.py  test_relationship.py
